--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+best_yolo_fire_smoke.pth filter=lfs diff=lfs merge=lfs -text
