--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+
 best_yolo_fire_smoke.pth filter=lfs diff=lfs merge=lfs -text
